// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render ExpensesSummary properly with one expense 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSummary
    expenseCount={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "Viewing ",
        1,
        " expense",
        " ",
        "totalling ",
        "$0.00",
      ],
    },
    "ref": null,
    "rendered": Array [
      "Viewing ",
      1,
      " expense",
      " ",
      "totalling ",
      "$0.00",
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Viewing ",
          1,
          " expense",
          " ",
          "totalling ",
          "$0.00",
        ],
      },
      "ref": null,
      "rendered": Array [
        "Viewing ",
        1,
        " expense",
        " ",
        "totalling ",
        "$0.00",
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`it should render ExpensesSummary properly with several expenses 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSummary
    expenseCount={5}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "Viewing ",
        5,
        " expense",
        "s ",
        "totalling ",
        "$0.00",
      ],
    },
    "ref": null,
    "rendered": Array [
      "Viewing ",
      5,
      " expense",
      "s ",
      "totalling ",
      "$0.00",
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Viewing ",
          5,
          " expense",
          "s ",
          "totalling ",
          "$0.00",
        ],
      },
      "ref": null,
      "rendered": Array [
        "Viewing ",
        5,
        " expense",
        "s ",
        "totalling ",
        "$0.00",
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
